@@ -1,3 +1,7 @@
+2005-10-14  Vincent Noel  <vnoel@cox.net>
+
+	* log_repaint.c: (logline_get_date): Make static.
+
 2005-10-14  Vincent Noel <vnoel@cox.net>
 
 	* log_repaint.c: (selection_changed_cb), (logline_get_date),
